--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
 @import url(../blocks/container/container.css);
 
 @import url(../blocks/page/page.css);
-
+/*header*/
 @import url(../blocks/header/__container/header_container.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__bar-left/header__bar-left.css);
@@ -27,7 +27,7 @@
 
 @import url(../blocks/footer/footer.css);
 
-/** Страничка "Выберите категорию" */
+/* Страничка "Выберите категорию" */
 
 @import url(../blocks/page/category/__form/category__form.css);
 @import url(../blocks/page/category/__heading/category__heading.css);
@@ -43,3 +43,17 @@
 @import url(../blocks/form-input/__checked/form-input__checked.css);
 @import url(../blocks/form-input/__control/form-input__control.css);
 @import url(../blocks/form-input/__control/_active/form-input__control_active.css);
+
+/* footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__container/footer__container.css);
+@import url(../blocks/footer/__icon/footer__icon.css);
+@import url(../blocks/footer/__icons/footer__icons.css);
+@import url(../blocks/footer/__image/footer__image.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__organizer/footer__organizer.css);
+@import url(../blocks/footer/__partners/footer__partners.css);
+@import url(../blocks/footer/__social/footer__social.css);
+@import url(../blocks/footer/__title/footer__title.css);
+@import url(../blocks/footer/__email/footer__email.css);
