--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@
 
 @import url(../blocks/page/page.css);
 /*header*/
+@import url(../blocks/header/header.css);
 @import url(../blocks/header/__container/header_container.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__bar-left/header__bar-left.css);
