--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,7 +8,7 @@
   text-align: left;
   margin: 0 0 24px 0 ;
   text-decoration: none;
-  color: #000;
+  color: #3B3748;
   transition: 0.3s;
 }
 
@@ -23,5 +23,5 @@
 }
 
 .footer__link:hover {
-  opacity: 0.5;
+  opacity: 0.7;
 }
