cafe form refactoring

--- a/blocks/form/__controls/form__controls.css
+++ b/blocks/form/__controls/form__controls.css
@@ -1,11 +1,11 @@
-.category__controls {
+.form__controls {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
 }
 
 @media screen and (max-width: 920px) {
-  .category__controls {
+  .form__controls {
     padding: 20px;
     position: absolute;
     bottom: 0;
