--- a/blocks/form/__heading/form__heading.css
+++ b/blocks/form/__heading/form__heading.css
@@ -1,4 +1,4 @@
-.category__heading {
+.form__heading {
   padding: 0;
   margin: 0;
   color: #3b3748;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .category__heading {
+  .form__heading {
     font-size: 32px;
     line-height: 36px;
     letter-spacing: 0;
