--- a/blocks/form/__input-container/form__input-container.css
+++ b/blocks/form/__input-container/form__input-container.css
@@ -1,4 +1,4 @@
-.category__input-container {
+.form__input-container {
   padding: 12px 0 0;
   margin: 0;
   display: flex;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .category__input-container {
+  .form__input-container {
     padding: 26px 0 0;
     gap: 8px;
   }
