--- a/blocks/form/__step/form__step.css
+++ b/blocks/form/__step/form__step.css
@@ -1,4 +1,4 @@
-.category__step {
+.form__step {
   padding: 0;
   margin: 0;
   font-size: 18px;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .category__step {
+  .form__step {
     font-size: 16px;
     line-height: 20px;
   }
