--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,4 +1,4 @@
-.category__form {
+.form {
   padding: 0;
   margin: 0;
 
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .category__form {
+  .form {
     height: 100%;
     justify-content: space-between;
   }
