--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -1,4 +1,4 @@
-.category__form-holder {
+.page__content {
   padding: 0;
   margin: 0 auto 220px;
   display: grid;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .category__form-holder {
+  .page__content {
     margin: 20px;
     height: 100%;
     display: flex;
