--- a/blocks/page/__heading/page__heading.css
+++ b/blocks/page/__heading/page__heading.css
@@ -1,7 +1,6 @@
-.category__heading {
+.page__heading {
   padding: 0;
   margin: 0;
-  color: #3b3748;
   font-size: 48px;
   line-height: 52px;
   font-weight: 500;
@@ -11,7 +10,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .category__heading {
+  .page__heading {
     font-size: 32px;
     line-height: 36px;
     letter-spacing: 0;
