--- a/blocks/page/__title/page__title.css
+++ b/blocks/page/__title/page__title.css
@@ -1,4 +1,4 @@
-.category__title {
+.page__title {
   padding: 40px;
   margin: 0;
   font-size: 96px;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 920px) {
-  .category__title {
+  .page__title {
     display: none;
   }
 }
