--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,6 @@
 
 @import url(../blocks/container/container.css);
 
-@import url(../blocks/page/page.css);
 /*header*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__container/header_container.css);
@@ -17,33 +16,38 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/button/_type/button_type_link.css);
 @import url(../blocks/button/_type/button_type_filled.css);
-/* @import url(../blocks/button/_type/button_type_outlined.css); */  /* используется только в формах */
+/* @import url(../blocks/button/_type/button_type_outlined.css); */ /* используется только в формах */
 @import url(../blocks/button/_type/button_type_burger.css);
 
 @import url(../blocks/button/_place/button_place_header.css);
 @import url(../blocks/button/__icon/button__icon.css);
 
-
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/footer/footer.css);
 
-/* Страничка "Выберите категорию" */
+/* Инпуты */
 
-@import url(../blocks/page/category/__form/category__form.css);
-@import url(../blocks/page/category/__heading/category__heading.css);
-@import url(../blocks/page/category/__input-container/category__input-container.css);
-@import url(../blocks/page/category/__step/category__step.css);
-@import url(../blocks/page/category/__title/category__title.css);
-@import url(../blocks/page/category/__form-holder/category__form-holder.css);
-@import url(../blocks/page/category/__input-value/category__input-value.css);
-@import url(../blocks/page/category/__controls/category__controls.css);
-
+@import url(../blocks/form/__input-container/form__input-container.css);
 @import url(../blocks/form-input/form-input.css);
+@import url(../blocks/form-input/__value/form-input__value.css);
+@import url(../blocks/form-input/__value/_checked/form-input__value_checked.css);
 @import url(../blocks/form-input/_active/form-input_active.css);
-@import url(../blocks/form-input/__checked/form-input__checked.css);
-@import url(../blocks/form-input/__control/form-input__control.css);
-@import url(../blocks/form-input/__control/_active/form-input__control_active.css);
+
+/* Стили формы */
+
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__control/form__control.css);
+@import url(../blocks/form/__control/_active/form__control_active.css);
+@import url(../blocks/form/__controls/form__controls.css);
+
+/* Основные стили страниц */
+
+@import url(../blocks/page/page.css);
+@import url(../blocks/page/__content/page__content.css);
+@import url(../blocks/page/__heading/page__heading.css);
+@import url(../blocks/page/__step/page__step.css);
+@import url(../blocks/page/__title/page__title.css);
 
 /* footer */
 @import url(../blocks/footer/footer.css);
