--- a/styles/index.css
+++ b/styles/index.css
@@ -27,6 +27,17 @@
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/footer/footer.css);
+/* Страничка "Стать участником" */
+@import url(../blocks/content/content.css);
+@import url(../blocks/how-to-participate/how-to-participate.css);
+@import url(../blocks/question-block/question-block.css);
+@import url(../blocks/title/title.css);
+@import url(../blocks/subtitle/subtitle.css);
+@import url(../blocks/question-block/__title/question-block__title.css);
+@import url(../blocks/question-block/__number/question-block__number.css);
+@import url(../blocks/question-block/__text/question-block__text.css);
+@import url(../blocks/form-button/form-button.css);
+
 
 /* Страничка "Выберите категорию" */
 
