--- a/blocks/subtitle/subtitle.css
+++ b/blocks/subtitle/subtitle.css
@@ -1,5 +1,6 @@
 .subtitle {
-    margin: 40px auto 24px 280px;
+    color: #3B3748;
+    margin: 40px auto 24px 240px;
     font-family: TT Firs Neue;
     font-size: 48px;
     font-style: normal;
