--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,5 +1,6 @@
 .title {
-    margin: 0 auto 0 40px;
+    color: #3B3748;
+    margin: 0 auto 0 0;
     font-family: TT Firs Neue;
     font-size: 96px;
     font-style: normal;
