--- a/blocks/form/__label/form__label.css
+++ b/blocks/form/__label/form__label.css
@@ -1,9 +1,11 @@
 .form__label {
+  padding: 0 24px;
+  margin: 0;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0px;
   text-align: left;
-  color: #96949E;
+  color: #96949e;
 }
