--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,8 @@
 .page {
   display: flex;
   flex-direction: column;
-  max-width: 1440px;
+  max-width: 100vw;
   min-width: 360px;
-  min-height: 100vh;
   margin: 0 auto;
   font-family: "TT Firs Neue", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
