--- a/blocks/form-input/form-input.css
+++ b/blocks/form-input/form-input.css
@@ -6,7 +6,7 @@
   font-size: 18px;
   line-height: 24px;
   font-weight: normal;
-  border: 2px solid black;
+  border: 2px solid #96949e;
   border-radius: 25px;
 }
 
