--- a/styles/index.css
+++ b/styles/index.css
@@ -34,7 +34,9 @@
 @import url(../blocks/question-block/__text/question-block__text.css);
 @import url(../blocks/form-button/form-button.css);
 
-/*Общие стили для элементов форм*/
+/* Общие стили для элементов форм*/
+@import url(../blocks/form/__container/form__container.css);
+@import url(../blocks/form/__container/_line/form__container_line_bottom.css);
 @import url(../blocks/form/__form/form__form.css);
 @import url(../blocks/form/__heading/form__heading.css);
 @import url(../blocks/form/__input-container/form__input-container.css);
@@ -53,9 +55,7 @@
 @import url(../blocks/form/__radio-unit/form__radio-unit.css);
 @import url(../blocks/form/__textarea/form__textarea.css);
 
-/* Страничка "Выберите категорию" */
-@import url(../blocks/category/__form-holder/category__form-holder.css);
-
+/* Инпуты формы */
 @import url(../blocks/form-input/form-input.css);
 @import url(../blocks/form-input/_active/form-input_active.css);
 @import url(../blocks/form-input/__checked/form-input__checked.css);
@@ -63,17 +63,6 @@
 @import url(../blocks/form-input/__control/_active/form-input__control_active.css);
 @import url(../blocks/form-input/__radio/form-input__radio.css);
 
-/* Форма "заполните форму для кафе/бар/ресторан" */
-@import url(../blocks/form/__container/_line/form__container_line_bottom.css);
-@import url(../blocks/form/__container/_place/form__container_place_cafe.css);
-@import url(../blocks/form/__container/_place/form__container_place_master-class.css);
-@import url(../blocks/form/__city-list/form__city-list.css);
-
-/* Форма "заполните форму для мастер-класс/лекция" */
-@import url(../blocks/form/__container/_place/form__container_place_master-class.css);
-
-/* Форма "заполните форму для посиделки/вечеринка" */
-@import url(../blocks/form/__radio-subtitle/form__radio-subtitle.css);
 /* footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
