fix mobile buttons

--- a/blocks/form/__controls/form__controls.css
+++ b/blocks/form/__controls/form__controls.css
@@ -2,15 +2,12 @@
   display: flex;
   justify-content: flex-end;
   gap: 10px;
+  margin-bottom: 92px;
 }
 
 @media screen and (max-width: 920px) {
   .form__controls {
     padding: 20px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
     height: 44px;
     justify-content: space-around;
     background: #fcfaf7;
