--- a/blocks/header/__container/header_container.css
+++ b/blocks/header/__container/header_container.css
@@ -1,5 +1,7 @@
 .header__container {
   display: flex;
-  background-color: rgba(255, 212, 0, 1);
-  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
