--- a/blocks/header/__container/header_container.css
+++ b/blocks/header/__container/header_container.css
@@ -1,7 +1,15 @@
 .header__container {
   display: flex;
   max-width: 1440px;
+  min-width: 360px;
   margin: 0 auto;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+@media screen and (max-width: 1210px) {
+  .header__container {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
