hotfix buttons and add container header

--- a/blocks/form/__button/_type/form__button_type_submit.css
+++ b/blocks/form/__button/_type/form__button_type_submit.css
@@ -1,5 +1,3 @@
-
-
 .form__button_type_submit::after {
   display: none;
   visibility: hidden;
@@ -11,7 +9,7 @@
   align-self: center;
   justify-content: center;
   background-color: #7100FF;
-  padding: 12px 55px;
+  padding: 0 55px;
   height: min-content;
   font-size: 16px;
   line-height: 20px;
@@ -28,7 +26,7 @@
   align-self: center;
   justify-content: center;
   background-color: #7100FF;
-  padding: 14px 78px;
+  padding: 0 78px;
   height: min-content;
   font-size: 16px;
   line-height: 20px;
