--- a/blocks/form/__controls/form__controls.css
+++ b/blocks/form/__controls/form__controls.css
@@ -12,5 +12,6 @@
     justify-content: space-around;
     background: #fcfaf7;
     box-shadow: 0px -8px 32px rgba(59, 55, 72, 0.12);
+    margin-bottom: 0;
   }
 }
