--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   color: #3b3748;
+  /* max-width: 1440px; */
 }
 
 @media screen and (max-width: 920px) {
