--- a/blocks/form-button/form-button.css
+++ b/blocks/form-button/form-button.css
@@ -1,32 +1,33 @@
 .form-button {
-    font-family: TT Firs Neue;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0px;
-    text-align: center;
-    border-radius: 26px;
-    background: #7100FF;
-    color: white;
-    width: 197px;
-    height: 48px;
-    border: none;
-    margin: 32px auto 0 963px;
+  font-family: TT Firs Neue;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
+  border-radius: 26px;
+  background: #7100ff;
+  color: white;
+  width: 197px;
+  height: 48px;
+  border: none;
+  margin: 32px auto 0 963px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 767px) {
-    .form-button {
-        width: 320px;
-        height: 44px;
-        margin: 0 auto 16px auto;
-        font-family: TT Firs Neue;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 20px;
-        letter-spacing: 0px;
-        text-align: center;
-        margin: 20px;    
-    }
+  .form-button {
+    width: 320px;
+    height: 44px;
+    margin: 0 auto 16px auto;
+    font-family: TT Firs Neue;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0px;
+    text-align: center;
+    margin: 20px;
+  }
 }
