--- a/blocks/form-input/form-input.css
+++ b/blocks/form-input/form-input.css
@@ -8,6 +8,7 @@
   font-weight: normal;
   border: 2px solid #96949e;
   border-radius: 25px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 920px) {
