--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   display: flex;
   flex-direction: column;
-  max-width: 1440px;
+  max-width: 100%;
   min-width: 360px;
   margin: 0 auto;
   font-family: "TT Firs Neue", Arial, sans-serif;
