--- a/blocks/participate/__controls/participate__controls.css
+++ b/blocks/participate/__controls/participate__controls.css
@@ -1,14 +1,15 @@
-.form__controls {
+.participate__controls {
   padding: 0;
-  margin: 0;
+  margin: 32px 0 92px 0;
   display: flex;
-  justify-content: flex-end;
-  gap: 10px;
+  align-self: flex-end;
 }
 
 @media screen and (max-width: 980px) {
-  .form__controls {
+  .participate__controls {
+    margin: 32px 0 0;
     height: 84px;
+    width: 100%;
     justify-content: space-around;
     background: #fcfaf7;
     box-shadow: 0px -8px 32px rgba(59, 55, 72, 0.12);
