--- a/blocks/participate/__title/participate__title.css
+++ b/blocks/participate/__title/participate__title.css
@@ -1,4 +1,4 @@
-.form__title {
+.participate__title {
   padding: 40px;
   margin: 0;
   font-size: 96px;
@@ -8,7 +8,11 @@
 }
 
 @media screen and (max-width: 980px) {
-  .form__title {
-    display: none;
+  .participate__title {
+    padding: 16px;
+    margin: 0 auto 0 20px;
+    font-size: 44px;
+    line-height: 44px;
+    letter-spacing: 0;
   }
 }
