--- a/blocks/question-block/__title/question-block__title.css
+++ b/blocks/question-block/__title/question-block__title.css
@@ -1,26 +1,24 @@
 .question-block__title {
-    color: #3B3748;
-    width: 306px;
-    margin: 20px auto auto 115px;
-    font-family: TT Firs Neue;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 36px;
-    letter-spacing: -0.01em;
-    text-align: left;
+  padding: 20px 0;
+  margin: 0;
+  color: #3b3748;
+  width: 306px;
+  min-width: 306px;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 36px;
+  letter-spacing: -0.01em;
 }
 
-@media screen and (max-width: 767px) {
-    .question-block__title {
-        width: 252px;
-        margin: 0 auto 16px auto;
-        font-family: TT Firs Neue;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 28px;
-        letter-spacing: 0px;
-        text-align: left;       
-    }
+@media screen and (max-width: 980px) {
+  .question-block__title {
+    width: 252px;
+    min-width: auto;
+    padding: 16px 0;
+    font-size: 24px;
+    font-style: normal;
+    line-height: 28px;
+    letter-spacing: 0;
+  }
 }
