--- a/blocks/question-block/question-block.css
+++ b/blocks/question-block/question-block.css
@@ -1,16 +1,17 @@
 .question-block {
-    width: 880px;
-    height: 112px;
-    display: flex;
-    text-align: left;
-    justify-content: space-between;
-    margin: 0 auto;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 40px;
+  height: 112px;
+  box-shadow: inset 0px -1px 0px #ebe9ed;
 }
 
-@media screen and (max-width: 767px) {
-    .question-block {
-        width: 360px;
-        height: 144px;
-        flex-wrap: wrap;
-    }
+@media screen and (max-width: 980px) {
+  .question-block {
+    padding: 3px 20px;
+    height: max-content;
+    flex-wrap: wrap;
+    gap: 0;
+  }
 }
