Fixed mobile btns

--- a/blocks/form-input/__control/form-input__control.css
+++ b/blocks/form-input/__control/form-input__control.css
@@ -4,3 +4,9 @@
   justify-content: center;
   background-color: transparent;
 }
+
+@media screen and (max-width: 980px) {
+  .form-input__control {
+    width: 45%;
+  }
+}
