--- a/blocks/participate/__controls/participate__controls.css
+++ b/blocks/participate/__controls/participate__controls.css
@@ -7,12 +7,14 @@
 
 @media screen and (max-width: 980px) {
   .participate__controls {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
     margin: 32px 0 0;
     height: 84px;
-    width: 100%;
     justify-content: space-around;
     background: #fcfaf7;
     box-shadow: 0px -8px 32px rgba(59, 55, 72, 0.12);
-    margin-bottom: 0;
   }
 }
