--- a/blocks/form/__field/form__field.css
+++ b/blocks/form/__field/form__field.css
@@ -2,4 +2,9 @@
   border: 2px solid #96949e;
   border-radius: 25px;
   padding: 10px 22px;
+  outline:none !important;
+}
+
+.form__field:focus {
+  border: 2px solid #7100FF;
 }
