Mobile form btn space

--- a/styles/index.css
+++ b/styles/index.css
@@ -68,6 +68,7 @@
 /* Страничка "Стать участником" */
 @import url(../blocks/participate/participate.css);
 @import url(../blocks/participate/__content/participate__content.css);
+@import url(../blocks/participate/__container/participate__container.css);
 @import url(../blocks/participate/__title/participate__title.css);
 @import url(../blocks/participate/__subtitle/participate__subtitle.css);
 @import url(../blocks/participate/__controls/participate__controls.css);
