--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 980px) {
   .form__container {
+    padding-bottom: 98px;
     margin: 20px;
     display: flex;
     flex-direction: column;
