--- a/blocks/form-input/__checker/_checked/form-input__checker_checked.css
+++ b/blocks/form-input/__checker/_checked/form-input__checker_checked.css
@@ -1,7 +1,7 @@
 .form-input__checker_checked {
   display: block;
   width: 24px;
-  background-image: url(../../../images/form/checked.svg);
+  background-image: url(../../../../images/form/checked.svg);
   background-position: center;
   background-repeat: no-repeat;
 }
