--- a/blocks/header/__bar-logo/header__bar-logo.css
+++ b/blocks/header/__bar-logo/header__bar-logo.css
@@ -1,10 +1,10 @@
-.header__bar-left {
+.header__bar-logo {
   display: flex;
   margin-left: 40px;
 }
 
 @media screen and (max-width: 1210px) {
-  .header__bar-left {
+  .header__bar-logo {
     margin-left: 20px;
     margin-right: 30px;
   }
