--- a/pages/master-class.css
+++ b/pages/master-class.css
@@ -1,8 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
-
 @import url(../blocks/container/container.css);
-
 @import url(../blocks/page/page.css);
 /*header*/
 @import url(../blocks/header/header.css);
@@ -13,72 +11,44 @@
 @import url(../blocks/header/__link-list/header__link-list.css);
 @import url(../blocks/header/__list-item/header__list-item.css);
 @import url(../blocks/header/__user-actions/header__user-actions.css);
-
 @import url(../blocks/button/button.css);
+@import url(../blocks/button/_place/button_place_header.css);
 @import url(../blocks/button/_type/button_type_link.css);
 @import url(../blocks/button/_type/button_type_filled.css);
-/* @import url(../blocks/button/_type/button_type_outlined.css); */ /* используется только в формах */
 @import url(../blocks/button/_type/button_type_burger.css);
-
-@import url(../blocks/button/_place/button_place_header.css);
 @import url(../blocks/button/__icon/button__icon.css);
-
-@import url(../blocks/form/__city-list/form__city-list.css);
-
+/*content*/
 @import url(../blocks/content/content.css);
-
-/* Общие стили для элементов форм*/
+@import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__content/form__content.css);
 @import url(../blocks/form/__container/form__container.css);
-@import url(../blocks/form/__form/form__form.css);
-@import url(../blocks/form/__heading/form__heading.css);
-@import url(../blocks/form/__input-container/form__input-container.css);
 @import url(../blocks/form/__step/form__step.css);
-@import url(../blocks/form/__title/form__title.css);
-@import url(../blocks/form/__controls/form__controls.css);
-@import url(../blocks/form/__field/form__field.css);
-@import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__instruction/form__instruction.css);
-@import url(../blocks/form/__list/form__list.css);
+@import url(../blocks/form/__heading/form__heading.css);
 @import url(../blocks/form/__paragraphs/form__paragraphs.css);
 @import url(../blocks/form/__paragraph/form__paragraph.css);
-@import url(../blocks/form/__paragraph/_type/form__paragraph_type_list.css);
+@import url(../blocks/form/__form/form__form.css);
+@import url(../blocks/form/__input-container/form__input-container.css);
 @import url(../blocks/form/__radio-block/form__radio-block.css);
-@import url(../blocks/form/__unit/form__unit.css);
-@import url(../blocks/form/__labeled-container/form__labeled-container.css);
 @import url(../blocks/form/__radio-unit/form__radio-unit.css);
-@import url(../blocks/form/__textarea/form__textarea.css);
-@import url(../blocks/form/__button/_type/form__button_type_submit.css);
+@import url(../blocks/form/__labeled-container/form__labeled-container.css);
+@import url(../blocks/form/__unit/form__unit.css);
+@import url(../blocks/form/__label/form__label.css);
+@import url(../blocks/form/__field/form__field.css);
+@import url(../blocks/form/__list/form__list.css);
+@import url(../blocks/form/__controls/form__controls.css);
 @import url(../blocks/form/__button/_type/form__button_type_back.css);
-@import url(../blocks/form/__radio-subtitle/form__radio-subtitle.css);
-
-/* Инпуты формы */
+@import url(../blocks/form/__button/_type/form__button_type_submit.css);
 @import url(../blocks/form-input/form-input.css);
-@import url(../blocks/form-input/_active/form-input_active.css);
-@import url(../blocks/form-input/__control/form-input__control.css);
-@import url(../blocks/form-input/__control/_active/form-input__control_active.css);
-@import url(../blocks/form-input/__radio/form-input__radio.css);
 @import url(../blocks/form-input/__radio-icon/form-input__radio-icon.css);
 @import url(../blocks/form-input/__radio-icon/_checked/form-input__radio-icon_checked.css);
+@import url(../blocks/form-input/__radio/form-input__radio.css);
+@import url(../blocks/form-input/_active/form-input_active.css);
 @import url(../blocks/form-input/__checker/form-input__checker.css);
 @import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
-@import url(../blocks/form-input/__bottom-line/form-input__bottom-line.css);
-
-/* Страничка "Стать участником" */
-@import url(../blocks/participate/participate.css);
-@import url(../blocks/participate/__content/participate__content.css);
-@import url(../blocks/participate/__container/participate__container.css);
-@import url(../blocks/participate/__title/participate__title.css);
-@import url(../blocks/participate/__subtitle/participate__subtitle.css);
-@import url(../blocks/participate/__controls/participate__controls.css);
-@import url(../blocks/participate/__control/participate__control.css);
-
-@import url(../blocks/question-block/question-block.css);
-@import url(../blocks/question-block/__title/question-block__title.css);
-@import url(../blocks/question-block/__number/question-block__number.css);
-@import url(../blocks/question-block/__text/question-block__text.css);
-
-/* footer */
+@import url(../blocks/form-input/__control/form-input__control.css);
+@import url(../blocks/form-input/__control/_active/form-input__control_active.css);
+/*footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
 @import url(../blocks/footer/__icon/footer__icon.css);
