--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,4 +1,4 @@
-.form__content {
+.form {
   margin: 0 auto 92px;
   width: max-content;
   display: flex;
@@ -6,14 +6,14 @@
 }
 
 @media screen and (max-width: 1210px) {
-  .form__content {
+  .form {
     width: auto;
     margin: 0 0 20px;
   }
 }
 
 @media screen and (max-width: 980px) {
-  .form__content {
+  .form {
     margin: 0;
     height: calc(100vh - 72px);
     justify-content: space-between;
