--- a/pages/partyForm_step3.css
+++ b/pages/partyForm_step3.css
@@ -20,8 +20,12 @@
 @import url(../blocks/button/_place/button_place_header.css);
 /*content*/
 @import url(../blocks/content/content.css);
-@import url(../blocks/form/__title/form__title.css);
-@import url(../blocks/form/__content/form__content.css);
+@import url(../blocks/content/__title/content__title.css);
+@import url(../blocks/content/__title/_hideable/content__title_hideable.css);
+/*input*/
+@import url(../blocks/form-input/form-input.css);
+/*form*/
+@import url(../blocks/form/form.css);
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__step/form__step.css);
 @import url(../blocks/form/__instruction/form__instruction.css);
@@ -34,11 +38,10 @@
 @import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__controls/form__controls.css);
-@import url(../blocks/form/__button/_type/form__button_type_back.css);
-@import url(../blocks/form/__button/_type/form__button_type_submit.css);
-@import url(../blocks/form-input/form-input.css);
-@import url(../blocks/form-input/__control/form-input__control.css);
-@import url(../blocks/form-input/__control/_active/form-input__control_active.css);
+@import url(../blocks/form/__control/form__control.css);
+@import url(../blocks/form/__control/_active/form__control_active.css);
+@import url(../blocks/form/__control/_type/form__control_type_submit.css);
+@import url(../blocks/form/__control/_type/form__control_type_back.css);
 /*footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
