--- a/blocks/content/__subtitle/content__subtitle.css
+++ b/blocks/content/__subtitle/content__subtitle.css
@@ -1,4 +1,4 @@
-.participate__subtitle {
+.content__subtitle {
   padding: 0 0 25px 0;
   margin: 0;
   font-size: 48px;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 980px) {
-  .participate__subtitle {
+  .content__subtitle {
     padding: 25px;
     font-size: 32px;
     line-height: 36px;
