--- a/blocks/form/__bottom-line/form__bottom-line.css
+++ b/blocks/form/__bottom-line/form__bottom-line.css
@@ -1,4 +1,4 @@
-.form-input__bottom-line {
+.form__bottom-line {
   padding-bottom: 19px;
   margin-bottom: -10px;
   border-bottom: 1px solid #ebe9ed;
