--- a/blocks/form/__control/form__control.css
+++ b/blocks/form/__control/form__control.css
@@ -1,4 +1,4 @@
-.form-input__control {
+.form__control {
   width: 205px;
   align-self: center;
   justify-content: center;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 980px) {
-  .form-input__control {
+  .form__control {
     width: 45%;
   }
 }
