--- a/blocks/form/__radio-icon/form__radio-icon.css
+++ b/blocks/form/__radio-icon/form__radio-icon.css
@@ -1,4 +1,4 @@
-.form-input__radio-icon {
+.form__radio-icon {
   width: 22px;
   height: 22px;
   background-image: url(../../../images/form/radio_inactive.svg);
