--- a/pages/master-class.css
+++ b/pages/master-class.css
@@ -20,8 +20,15 @@
 @import url(../blocks/button/__icon/button__icon.css);
 /*content*/
 @import url(../blocks/content/content.css);
-@import url(../blocks/form/__title/form__title.css);
-@import url(../blocks/form/__content/form__content.css);
+@import url(../blocks/content/__title/content__title.css);
+@import url(../blocks/content/__title/_hideable/content__title_hideable.css);
+/*input*/
+@import url(../blocks/form-input/form-input.css);
+@import url(../blocks/form-input/_active/form-input_active.css);
+@import url(../blocks/form-input/__checker/form-input__checker.css);
+@import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
+/*form*/
+@import url(../blocks/form/form.css);
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__step/form__step.css);
 @import url(../blocks/form/__instruction/form__instruction.css);
@@ -32,23 +39,19 @@
 @import url(../blocks/form/__input-container/form__input-container.css);
 @import url(../blocks/form/__radio-block/form__radio-block.css);
 @import url(../blocks/form/__radio-unit/form__radio-unit.css);
+@import url(../blocks/form/__radio/form__radio.css);
+@import url(../blocks/form/__radio-icon/form__radio-icon.css);
+@import url(../blocks/form/__radio-icon/_checked/form__radio-icon_checked.css);
 @import url(../blocks/form/__labeled-container/form__labeled-container.css);
 @import url(../blocks/form/__unit/form__unit.css);
 @import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__list/form__list.css);
 @import url(../blocks/form/__controls/form__controls.css);
-@import url(../blocks/form/__button/_type/form__button_type_back.css);
-@import url(../blocks/form/__button/_type/form__button_type_submit.css);
-@import url(../blocks/form-input/form-input.css);
-@import url(../blocks/form-input/__radio-icon/form-input__radio-icon.css);
-@import url(../blocks/form-input/__radio-icon/_checked/form-input__radio-icon_checked.css);
-@import url(../blocks/form-input/__radio/form-input__radio.css);
-@import url(../blocks/form-input/_active/form-input_active.css);
-@import url(../blocks/form-input/__checker/form-input__checker.css);
-@import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
-@import url(../blocks/form-input/__control/form-input__control.css);
-@import url(../blocks/form-input/__control/_active/form-input__control_active.css);
+@import url(../blocks/form/__control/form__control.css);
+@import url(../blocks/form/__control/_active/form__control_active.css);
+@import url(../blocks/form/__control/_type/form__control_type_submit.css);
+@import url(../blocks/form/__control/_type/form__control_type_back.css);
 /*footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
