--- a/pages/other.css
+++ b/pages/other.css
@@ -20,8 +20,15 @@
 @import url(../blocks/button/_place/button_place_header.css);
 /*content*/
 @import url(../blocks/content/content.css);
-@import url(../blocks/form/__title/form__title.css);
-@import url(../blocks/form/__content/form__content.css);
+@import url(../blocks/content/__title/content__title.css);
+@import url(../blocks/content/__title/_hideable/content__title_hideable.css);
+/*input*/
+@import url(../blocks/form-input/form-input.css);
+@import url(../blocks/form-input/_active/form-input_active.css);
+@import url(../blocks/form-input/__checker/form-input__checker.css);
+@import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
+/*form*/
+@import url(../blocks/form/form.css);
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__step/form__step.css);
 @import url(../blocks/form/__instruction/form__instruction.css);
@@ -36,15 +43,11 @@
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__list/form__list.css);
 @import url(../blocks/form/__controls/form__controls.css);
-@import url(../blocks/form/__button/_type/form__button_type_back.css);
-@import url(../blocks/form/__button/_type/form__button_type_submit.css);
-@import url(../blocks/form-input/form-input.css);
-@import url(../blocks/form-input/_active/form-input_active.css);
-@import url(../blocks/form-input/__control/form-input__control.css);
-@import url(../blocks/form-input/__bottom-line/form-input__bottom-line.css);
-@import url(../blocks/form-input/__control/_active/form-input__control_active.css);
-@import url(../blocks/form-input/__checker/form-input__checker.css);
-@import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
+@import url(../blocks/form/__control/form__control.css);
+@import url(../blocks/form/__control/_active/form__control_active.css);
+@import url(../blocks/form/__control/_type/form__control_type_submit.css);
+@import url(../blocks/form/__control/_type/form__control_type_back.css);
+@import url(../blocks/form/__bottom-line/form__bottom-line.css);
 /*footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
