--- a/blocks/form-input/form-input.css
+++ b/blocks/form-input/form-input.css
@@ -9,12 +9,16 @@
   border: 2px solid #96949e;
   border-radius: 25px;
   cursor: pointer;
+  font-size: 18px;
+  font-style: normal;
 }
 
 @media screen and (max-width: 980px) {
   .form-input {
-    padding: 12px 22px;
     height: min-content;
+    font-size: 16px;
+    line-height: 20px;
+    padding: 10px 20px;
     font-size: 16px;
     line-height: 20px;
   }
