--- a/pages/cafe-contacts.css
+++ b/pages/cafe-contacts.css
@@ -34,15 +34,19 @@
 @import url(../blocks/form/__paragraph/form__paragraph.css);
 @import url(../blocks/form/__form/form__form.css);
 @import url(../blocks/form/__labeled-container/form__labeled-container.css);
+@import url(../blocks/form/__labeled-container/_place/form__labeled-container_place_form.css);
 @import url(../blocks/form/__unit/form__unit.css);
 @import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__textarea/form__textarea.css);
+@import url(../blocks/form/__textarea/_size/form__textarea_size_l.css);
 @import url(../blocks/form/__controls/form__controls.css);
 @import url(../blocks/form/__control/form__control.css);
 @import url(../blocks/form/__control/_active/form__control_active.css);
 @import url(../blocks/form/__control/_type/form__control_type_submit.css);
 @import url(../blocks/form/__control/_type/form__control_type_back.css);
+
+
 /*footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
