--- a/pages/partyForm.css
+++ b/pages/partyForm.css
@@ -27,6 +27,7 @@
 @import url(../blocks/form-input/_active/form-input_active.css);
 @import url(../blocks/form-input/__checker/form-input__checker.css);
 @import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
+@import url(../blocks/form-input/_place/form-input_place_forms.css);
 /*form*/
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__container/form__container.css);
