--- a/blocks/form-input/__control/form-input__control.css
+++ b/blocks/form-input/__control/form-input__control.css
@@ -1,4 +1,4 @@
-.form__control {
+.form-input__control {
   align-self: center;
   justify-content: center;
   background-color: transparent;
@@ -6,3 +6,4 @@
   width: 40%;
   max-width: 204px;
 }
+/*файл удален*/
