--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -1,6 +1,6 @@
 .form__container {
-  padding: 0;
-  margin: 0 auto 32px;
+  padding: 0 0 0 0;
+  margin: 0 auto 20px;
   display: grid;
   grid-template-columns: minmax(min-content, 309px) minmax(min-content, 531px);
   column-gap: 40px;
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 980px) {
   .form__container {
-    padding-bottom: 98px;
+    padding-bottom: 90px;
     margin: 20px;
     display: flex;
     flex-direction: column;
