--- a/blocks/form/__controls/form__controls.css
+++ b/blocks/form/__controls/form__controls.css
@@ -16,5 +16,6 @@
     justify-content: space-around;
     background: #fcfaf7;
     box-shadow: 0px -8px 32px rgba(59, 55, 72, 0.12);
+    padding: 0 20px 0 20px;
   }
 }
