--- a/blocks/form/__form/form__form.css
+++ b/blocks/form/__form/form__form.css
@@ -1,20 +1,17 @@
 .form__form {
   padding: 0;
   margin: 0;
-
   display: flex;
   flex-direction: column;
-  gap: 42px;
-
   grid-row: 2;
   grid-column: 2;
-
   font-size: 18px;
   line-height: 24px;
 }
 
 @media screen and (max-width: 980px) {
   .form__form {
+    padding: 7px 0 0 0;
     height: 100%;
     justify-content: space-between;
   }
