--- a/blocks/form/__input-container/form__input-container.css
+++ b/blocks/form/__input-container/form__input-container.css
@@ -2,14 +2,13 @@
   padding: 12px 0 0;
   margin: 0;
   display: flex;
-  gap: 12px;
   flex-direction: column;
   border: none;
+gap: 12px;
 }
 
 @media screen and (max-width: 980px) {
   .form__input-container {
-    padding: 26px 0 0;
-    gap: 8px;
+    padding: 0;
   }
 }
