--- a/blocks/form/__label/form__label.css
+++ b/blocks/form/__label/form__label.css
@@ -9,3 +9,11 @@
   text-align: left;
   color: #96949e;
 }
+
+@media screen and (max-width: 980px) {
+  .form__label {
+    font-size: 16px;
+    line-height: 20px;
+    padding: 0 20px;
+  }
+}
