--- a/blocks/form/__labeled-container/form__labeled-container.css
+++ b/blocks/form/__labeled-container/form__labeled-container.css
@@ -1,8 +1,14 @@
 .form__labeled-container {
   padding: 0;
-  margin: 0 0 12px 0;
+  margin: 20px 0 0 0;
   display: flex;
-  gap: 36px;
+  gap: 32px;
   flex-direction: column;
   border: none;
+}
+
+@media screen and (max-width: 980px) {
+  .form__labeled-container {
+    gap: 15px;
+  }
 }
