--- a/blocks/form/__list/form__list.css
+++ b/blocks/form/__list/form__list.css
@@ -5,4 +5,12 @@
   background: url(../../../images/arrow_custom.svg) no-repeat right;
   background-color: #fff;
   background-position-x: calc(100% - 21px);
+  padding: 12px 20px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+
 }
