--- a/blocks/form/__paragraphs/form__paragraphs.css
+++ b/blocks/form/__paragraphs/form__paragraphs.css
@@ -1,6 +1,6 @@
 .form__paragraphs {
   margin: 0;
-  padding: 12px 0 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   gap: 18px;
@@ -10,5 +10,16 @@
   .form__paragraphs {
     font-size: 16px;
     line-height: 20px;
+    
+  }
+
+  .form__paragraphs::after {
+    content: '';
+    display: block;
+    height: 1px;
+    margin: 0 -20px;
+    background: #ebe9ed;
   }
 }
+
+
