--- a/blocks/form/__radio-block/form__radio-block.css
+++ b/blocks/form/__radio-block/form__radio-block.css
@@ -1,10 +1,15 @@
 .form__radio-block {
-  padding: 32px 0;
-  margin: -23px 0;
+  padding: 0 0 0 0;
   display: flex;
   flex-direction: column;
   gap: 40px;
   border: none;
-  border-top: 1px solid #ebe9ed;
-  border-bottom: 1px solid #ebe9ed;
+  margin: 30px 0 0 0;
+}
+
+@media screen and (max-width: 980px) {
+  .form__radio-block {
+    gap: 52px;
+    margin: 15px 0 0 0;
+  }
 }
