--- a/blocks/form/__textarea/form__textarea.css
+++ b/blocks/form/__textarea/form__textarea.css
@@ -1,6 +1,13 @@
 .form__textarea {
-  height: 104px;
   outline: none;
+  max-height: 200px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+  resize: none;
 }
 
 .form__textarea:focus {
