--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -1,7 +1,7 @@
 .header__container {
   display: flex;
   max-width: 1440px;
-  min-width: 360px;
+  min-width: 320px;
   margin: 0 auto;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -11,5 +11,8 @@
   .header__container {
     padding-top: 12px;
     padding-bottom: 12px;
+    justify-content: space-between;
+    max-height: 68px;
+    box-sizing: border-box;
   }
 }
