--- a/pages/cafeForm.css
+++ b/pages/cafeForm.css
@@ -27,6 +27,7 @@
 @import url(../blocks/form-input/_active/form-input_active.css);
 @import url(../blocks/form-input/__checker/form-input__checker.css);
 @import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
+@import url(../blocks/form-input/_place/form-input_place_forms.css);
 /*form*/
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__container/form__container.css);
@@ -37,12 +38,15 @@
 @import url(../blocks/form/__paragraph/form__paragraph.css);
 @import url(../blocks/form/__paragraph/_type/form__paragraph_type_list.css);
 @import url(../blocks/form/__form/form__form.css);
+@import url(../blocks/form/__list/form__list.css);
+@import url(../blocks/form/__input-container/form__input-container.css);
 @import url(../blocks/form/__labeled-container/form__labeled-container.css);
 @import url(../blocks/form/__unit/form__unit.css);
 @import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__list/form__list.css);
 @import url(../blocks/form/__textarea/form__textarea.css);
+@import url(../blocks/form/__textarea/_size/form__textarea_size_xl.css);
 @import url(../blocks/form/__controls/form__controls.css);
 @import url(../blocks/form/__control/form__control.css);
 @import url(../blocks/form/__control/_active/form__control_active.css);
