--- a/pages/category.css
+++ b/pages/category.css
@@ -20,6 +20,7 @@
 @import url(../blocks/button/__icon/button__icon.css);
 /*content*/
 @import url(../blocks/content/content.css);
+@import url(../blocks/content/_place/content_place_category.css);
 @import url(../blocks/content/__title/content__title.css);
 @import url(../blocks/content/__title/_hideable/content__title_hideable.css);
 /*input*/
@@ -29,6 +30,7 @@
 @import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
 /*form*/
 @import url(../blocks/form/form.css);
+@import url(../blocks/form/_type/form_type_category.css);
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__step/form__step.css);
 @import url(../blocks/form/__instruction/form__instruction.css);
