--- a/pages/master-class.css
+++ b/pages/master-class.css
@@ -27,6 +27,7 @@
 @import url(../blocks/form-input/_active/form-input_active.css);
 @import url(../blocks/form-input/__checker/form-input__checker.css);
 @import url(../blocks/form-input/__checker/_checked/form-input__checker_checked.css);
+@import url(../blocks/form-input/_place/form-input_place_forms.css);
 /*form*/
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__container/form__container.css);
@@ -47,6 +48,7 @@
 @import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__list/form__list.css);
+@import url(../blocks/form/__bottom-line/form__bottom-line.css);
 @import url(../blocks/form/__controls/form__controls.css);
 @import url(../blocks/form/__control/form__control.css);
 @import url(../blocks/form/__control/_active/form__control_active.css);
