Error message icon

--- a/pages/other.css
+++ b/pages/other.css
@@ -49,6 +49,7 @@
 @import url(../blocks/form/__radio-unit/form__radio-unit.css);
 @import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__field/form__field.css);
+@import url(../blocks/form/__field/_error/form__field_error.css);
 @import url(../blocks/form/__list/form__list.css);
 @import url(../blocks/form/__controls/form__controls.css);
 @import url(../blocks/form/__bottom-line/form__bottom-line.css);
