add hover for buttons

--- a/blocks/content/__control/content__control.css
+++ b/blocks/content/__control/content__control.css
@@ -18,6 +18,11 @@
   border-radius: 25px;
 
   cursor: pointer;
+  transition: background-color .1s ease-in;
+}
+
+.content__control:hover {
+  background-color: #5100B8;
 }
 
 @media screen and (max-width: 980px) {
