--- a/blocks/button/__icon/button__icon.css
+++ b/blocks/button/__icon/button__icon.css
@@ -2,6 +2,13 @@
   margin-right: 10px;
   width: 24px;
   height: 24px;
+  transition: color .2s ease-in;
+  color: #3B3748;
+  transition: filter .1s ease-in;
+}
+
+.button__icon:hover {
+  filter: invert(20%) sepia(92%) saturate(3718%) hue-rotate(271deg) brightness(62%) contrast(194%)
 }
 
 @media screen and (max-width: 1210px) {
