--- a/blocks/form/__list/form__list.css
+++ b/blocks/form/__list/form__list.css
@@ -6,11 +6,17 @@
   background-color: #fff;
   background-position-x: calc(100% - 21px);
   padding: 12px 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 24px;
   letter-spacing: 0px;
   text-align: left;
+}
 
+@media screen and (max-width: 980px) {
+  .form__list {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
