--- a/pages/master-class.css
+++ b/pages/master-class.css
@@ -51,6 +51,8 @@
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__list/form__list.css);
 @import url(../blocks/form/__bottom-line/form__bottom-line.css);
+@import url(../blocks/form/__radio-block/_subtitle/form__radio-block_subtitle_no.css);
+@import url(../blocks/form/__unit/_subtitle/form__unit_subtitle_no.css);
 @import url(../blocks/form/__controls/form__controls.css);
 @import url(../blocks/form/__control/form__control.css);
 @import url(../blocks/form/__control/_active/form__control_active.css);
