--- a/blocks/form/__radio-block/form__radio-block.css
+++ b/blocks/form/__radio-block/form__radio-block.css
@@ -1,15 +1,14 @@
 .form__radio-block {
-  padding: 0 0 0 0;
+  padding: 0;
+  margin: 20px 0 0;
   display: flex;
   flex-direction: column;
-  gap: 40px;
   border: none;
-  margin: 30px 0 0 0;
 }
 
 @media screen and (max-width: 980px) {
   .form__radio-block {
-    gap: 52px;
-    margin: 15px 0 0 0;
+    margin: 20px 0 0;
   }
 }
+
