--- a/blocks/form/__radio-unit/form__radio-unit.css
+++ b/blocks/form/__radio-unit/form__radio-unit.css
@@ -1,4 +1,6 @@
 .form__radio-unit {
+  min-height: 46px;
+  align-items: center;
   padding: 0;
   margin: 0;
   display: flex;
@@ -11,11 +13,11 @@
   text-align: left;
 }
 
-
 @media screen and (max-width: 980px) {
   .form__radio-unit {
     font-size: 16px;
+    gap: 5px;
     line-height: 20px;
+    min-height: 44px;
   }
 }
-
