--- a/blocks/form/__paragraph/_type/form__paragraph_type_list.css
+++ b/blocks/form/__paragraph/_type/form__paragraph_type_list.css
@@ -1,14 +1,11 @@
 .form__paragraph_type_list {
   padding: 0;
   margin: 0 0 0 28px;
-  list-style-type: disc;
-  font-size: 10px;
+  list-style: none;
 }
 
 @media screen and (max-width: 980px) {
   .form__paragraph_type_list {
-    font-size: 16px;
-    line-height: 20px;
-    margin-top: -3px
+    margin: -3px 0 0 26px;
   }
 }
