fix: добавить единое имя для инпутов радио, реализовать переключение классов средствами CSS

--- a/blocks/form/__radio/form__radio.css
+++ b/blocks/form/__radio/form__radio.css
@@ -1,3 +1,8 @@
 .form__radio {
   display: none;
 }
+
+.form__radio:checked + .form__radio-icon {
+  display: block;
+  background-image: url(../../../../images/form/radio_active.svg);
+}
